# rsAzDevOps

./: Cargo.toml  pyproject.toml  readme.md
src/: base_api.rs  github_api.rs  lib.rs  main.rs  salesforce_api.rs
